# 5426MPI

./: CMakeLists.txt  README.md  hello  main.c  tmpi_rank.c  tmpi_rank.h
Assignment/: Assignment_MPI.c  ass  assignment1.c
Chapter3/: mpiex  mpiex.c
MPIprogram/: MPI_Parallel.c  MPI_Parallel.h  a.out  mpiparallel  t3  t3_2  tutorial  tutorial.c  tutorial3_1.c  tutorial3_2.c
PThreads/: Linux_Unix.c  Pthread_ex.c
